12164 audio: definition of implicit copy constructor/operator is deprecated Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>